src/infra/argocd/components/opencost/kustomize/namespace.yaml
# Defines opencost namespace for the `<cluster>-opencost` Application.

apiVersion: v1
kind: Namespace
metadata:
  name: opencost
  labels:
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/part-of: cluster-runtime
    cost-center: shared-infrastructure
    environment: production
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
